etc/tests/fuzz/errors/type/inferred-nested-index-result.nshape
shape type-inferred-nested-index-result {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "variable declaration: expected str, got int"
  source ny <<'NY'
use std.core

fn pick(rows) {
   rows[1][0]
}

def str s = pick([[1], [2]])
print(s)
NY
}
